--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,14 +7,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/frontend/styles/main.css">
+  <link rel="stylesheet" href="/frontend/styles/home.css">
+
+  <link rel="stylesheet" href="/frontend/styles/responsive.css">
 </head>
 <body>
   
   <div id="page-home">
     <div class="content">
       <header>
-        <img src="/assets/logo.svg" alt="Logomarca">
+        <img src="/frontend/assets/logo.svg" alt="Logomarca">
         <a href="#">
           <span></span>
           Cadastre um ponto de coleta
